# asuswrt-xiaomi

./: README.TXT  README.md
release/src-ra-5010/: platform.mak  profile.mak  xz
release/src-ra-5010/Uboot/: Makefile  config.in  config.in.ori  config.mk  config_ac65u  config_ac85p  config_acrh26  config_n800hp  config_rpac87  mt7621_ddr.sh  uboot_version.h
release/src-ra-5010/Uboot/common/: Makefile  cmd_boot.c  cmd_bootm.c  cmd_load.c  cmd_mem.c  cmd_net.c  cmd_tftpServer.c  cmd_usb.c  gpio.c  replace.c  usb.c  usb_storage.c
release/src-ra-5010/Uboot/drivers/: Makefile  ehci-hcd.c  ehci-ra.c  flash_wrapper.c  i2c_drv.c  mii_mgr.c  ohci-hcd.c  rt2880_eth.c  spi_drv.c  spi_flash.c  spi_rt6855A_flash.c
release/src-ra-5010/Uboot/include/: cmd_confdefs.h  cmd_tftpServer.h  common.h  exports.h  gpio (副本).h  gpio.h  nand_api.h  rt_mmap.h  usb_defs.h  version.h
release/src-ra-5010/Uboot/lib_generic/: LzmaDecode.c  string.c  zlib.c
release/src-ra-5010/Uboot/lib_mips/: board.c  mips_linux.c  time.c
release/src-ra-5010/Uboot/net/: net.c
release/src-ra-5010/Uboot/scripts/: Menuconfig
release/src-ra-5010/Uboot/tools/: image.h  mkimage.c
release/src-ra-5010/asustools/: mkimage
release/src-ra-5010/include/: bcmcrypto  bcmnvram.h
release/src-ra-5010/linux/config/: Configure.help  Makefile  config.in  fixconfig  mkconfig  setconfig
release/src-ra-5010/linux/linux-3.10.14.x/: MTKRalink_Note.txt  Makefile  config_base
release/src-ra-5010/linux/vendors/: Makefile
release/src-rt/: Makefile  platform.mak  target.mak  version.conf
release/src/ctools/: trx_asus.c
release/src/router/: Makefile  config_base  extendno.conf
release/src/router/802.1x-3.0.0.0/: Makefile  ap.h  config.c  config.h  ieee802_1x.c  ieee802_1x.h  radius.c  radius.h  radius_client.c  rtdot1x.c  rtdot1x.h  sta_info.c
release/src/router/APP-IPK/: Makefile.aicloud  Makefile.aicloud-i686  Makefile.aicloud-mipsel  Makefile.aicloud-new
release/src/router/APP-IPK/DM-ipk/snarf-7.0/: ChangeLog  INSTALL  Makefile  Makefile.N56U  Makefile.am  Makefile.in  Makefile.pc  README  TODO  acconfig.h  aclocal.m4  ansi2knr.c  config.cache  config.h  config.h.in  config.status  configure  configure.in  ex.c  ex.h  ftp.c  ftp.h  gopher.c  gopher.h  herror.c  http.c  http.h  llist.c  llist.h  logs.h  mkinstalldirs  options.c  options.h  snarf-2.prj  snarf.1  snarf.c  snarf.conf  snarf.spec  snarf.spec.in  snarf_err  (+6 more)
release/src/router/aaews/: Makefile
release/src/router/asuswebstorage/: Makefile
release/src/router/busybox-1.17.4/: Makefile  config_base
release/src/router/bwdpi_source/: Makefile
release/src/router/config/: config.in
release/src/router/curl/: Makefile.in  configure
release/src/router/dropbear/: localoptions.h
release/src/router/ez-ipupdate/: Makefile  ez-ipupdate.c
release/src/router/flash/: Makefile
release/src/router/httpd/: Makefile  apps.c  aspbw.c  cgi.c  ej.c  gencert.sh  httpd.c  httpd.h  openvpn_options.c  openvpn_options.h  web.c
release/src/router/infosvr/: common.c  infosvr.c  storage.c
release/src/router/iproute2-3.x/: Makefile
release/src/router/libdisk/: disk_share.c  usb_info.c  write_smb_conf.c
release/src/router/libvpn/: Makefile  openvpn_config.h  openvpn_control.h
release/src/router/lighttpd-1.4.39/: preconfigure-script-hnd
release/src/router/minidlna/: scanner.c  upnphttp.c
release/src/router/miniupnpd/: Changelog.txt  Makefile.linux  asyncsendto.c  genconfig.sh  miniupnpd.c  natpmp.c  pcpserver.c  (+9 more)
tools/: README.TXT
(+4920 files in other folders)
